--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,25 @@
+<% @products.each do |product| %>
+<h2><%= product.name %></h2><br>
+<div id="description-<%= product.id %>"><%= truncate product.description %></div><br>
+<%= product.price %><br>
+<button class="js-more" data-id="<%= product.id %>">More Info</button>
+<% end %>
 
+<script type="text/javascript" charset="utf-8">
+$(function () {
+  $(".js-more").on('click', function() {
+    // get the id from the data attribute
+    var id = $(this).data("id");
+    $.get("/products/" + id + "/description", function(data) {
+      $.get("/products/" + id + "/inventory", function(inventory_data) {
+        if (inventory_data == "false"){
+          $("#description-" + id).append("<br><br>" + "Sold Out")
+        } else {
+        $("#description-" + id).append("<br><br>" + "Available")
+      }
+      });
+      $("#description-" + id).text(data);
+    });
+  });
+});
+</script>
