--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,1 +1,7 @@
-
+<%= form_for @product do |f|%>
+  name: <%= f.text_field :name %>
+  description: <%= f.text_area :description %>
+  price: <%= f.number_field :price %>
+  inventory count: <%= f.number_field :inventory %>
+  <%= f.submit %>
+<% end %>
